--- a/appfront/package.json
+++ b/appfront/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "iview": "^3.1.3",
+    "js-cookie": "^2.2.0",
     "vue": "^2.5.2",
     "vue-axios": "^2.1.4",
     "vue-resource": "^1.5.1",
