--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+
+.gitignore
 .DS_Store
 node_modules
 driver
@@ -17,6 +19,7 @@ yarn-error.log*
 
 # Editor directories and files
 .idea
+.ssh
 .vscode
 *.suo
 *.ntvs*
