--- a/appfront/package.json
+++ b/appfront/package.json
@@ -58,6 +58,7 @@
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
+    "iview-loader": "^1.2.2",
     "jest": "^22.0.4",
     "jest-serializer-vue": "^0.3.0",
     "less": "^3.8.1",
