--- a/appfront/package.json
+++ b/appfront/package.json
@@ -21,6 +21,7 @@
     "vue": "^2.5.2",
     "vue-axios": "^2.1.4",
     "vue-cookie": "^1.1.4",
+    "vue-i18n": "^8.3.1",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
