--- a/appfront/package.json
+++ b/appfront/package.json
@@ -62,9 +62,10 @@
     "iview-loader": "^1.2.2",
     "jest": "^22.0.4",
     "jest-serializer-vue": "^0.3.0",
+    "json-parse-better-errors": "^1.0.2",
     "less": "^3.8.1",
     "less-loader": "^4.1.0",
-    "nightwatch": "^0.9.12",
+    "nightwatch": "^1.0.14",
     "node-notifier": "^5.1.2",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
@@ -81,13 +82,14 @@
     "style-loader": "^0.23.1",
     "stylus-loader": "^3.0.2",
     "uglifyjs-webpack-plugin": "^1.1.1",
-    "url-loader": "^0.5.8",
+    "url-loader": "^1.1.2",
     "vue-jest": "^1.0.2",
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.1.2",
     "vue-template-compiler": "^2.5.2",
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
+    "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^2.9.1",
     "webpack-merge": "^4.1.0"
   },
