--- a/appfront/package.json
+++ b/appfront/package.json
@@ -18,6 +18,7 @@
     "echarts": "^4.2.0-rc.2",
     "extract-text-webpack-plugin": "^2.1.2",
     "iview": "^3.2.1",
+    "jquery": "^3.3.1",
     "js-cookie": "^2.2.0",
     "vue": "^2.5.2",
     "vue-axios": "^2.1.4",
