--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -16,7 +16,7 @@ server {
 		proxy_pass http://47.105.169.97:9000/admin;
 	}
 	location /vue {
-		proxy_pass http://47.105.169.97:9000;
+		proxy_pass http://47.105.169.97:9000/vue;
 	}
 	location ^~ /static/admin {
 		alias /home/vue-django-iview/static;
